feat: Update security configuration and environment variables; enhance internal API key validation and modify JWT secret handling